# quantum-nonogram-solver

./: .dashboard.yaml  .dockerignore  .gitignore  .gitmodules  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  environment.yml  index.html  nonogram.ipynb  pyproject.toml  pytest.ini
.github/workflows/: deploy-pages.yml  tests.yml
.ipynb_checkpoints/: nonogram-checkpoint.ipynb  test_diffusion-checkpoint.py
nonogram/: __init__.py  classical.py  core.py  data.py  errors.py  io.py  metrics.py  quantum.py  solver.py
notebooks/: demo.ipynb
puzzles/: My Puzzle.non.json
runs/: run_706659b4.json  run_8d494c35.json
tests/: conftest.py  test_api_contract.py  test_api_integration.py  test_benchmark_harness.py  test_chart.py  test_classical.py  test_classical_verification.py  test_constraint_density.py  test_core.py  test_core_edge_cases.py  test_cors.py  test_data_validation.py  test_editor_logic.py  test_encoding_validation.py  test_errors.py  test_execution_counts.py  test_hardware_2x2.py  test_hardware_3x3.py  test_hardware_parsing.py  test_integration.py  test_io.py  test_metrics.py  test_phase1_solver.py  test_phase2_infra.py  test_phase3_crosscutting.py  test_quantum.py  test_quantum_robustness.py  test_routes.py  test_socketio_integration.py  test_solver_abc.py  test_static_circuit.py  test_webapp_config.py
tools/: __init__.py  benchmark_comparison.py  chart.py  config.py  state.py  webapp.py
tools/routes/: __init__.py  grid.py  hardware.py  puzzle.py  (+2 more)
website/: index.html  package-lock.json  package.json  vitest.config.js
(+15 files in other folders)
