[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nonogram"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24,<3.0",
]

[project.optional-dependencies]
quantum = [
    "qiskit>=2.2,<3.0",
    "qiskit-algorithms>=0.3,<1.0",
    "qiskit-ibm-runtime>=0.30,<1.0",
]
web = [
    "flask>=3.0,<4.0",
    "flask-cors>=4.0,<5.0",
    "flask-socketio>=5.3,<6.0",
]
dev = [
    "pytest>=7.0,<9.0",
    "matplotlib>=3.7,<4.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nonogram*", "tools*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
